@@ -30,6 +30,23 @@ these methods:
 
 … which behave as they normally do in promise implementations.
 
+Additionally, C<all()> and C<race()> may be used, thus:
+
+    my $p3 = Promise::XS::Promise->all( $p1, $p2, .. );
+    my $p3 = Promise::XS::Promise->race( $p1, $p2, .. );
+
+… or, just:
+
+    my $p3 = ref($p1)->all( $p1, $p2, .. );
+    my $p3 = ref($p1)->race( $p1, $p2, .. );
+
+… or even:
+
+    my $p3 = $p1->all( $p1, $p2, .. );
+    my $p3 = $p1->race( $p1, $p2, .. );
+
+(Note the repetition of $p1 in these last examples!)
+
 =head1 NOTES
 
 Subclassing this class won’t work because the above-named methods always
@@ -37,6 +54,75 @@ return instances of (exactly) this class. That may change eventually,
 but for now this is what’s what.
 
 =cut
+
+# Lifted from AnyEvent::XSPromises
+sub all {
+    my $remaining= @_ - 1;
+    my @values;
+    my $failed= 0;
+    my $then_what= Promise::XS::Deferred::create();
+    my $pending= 1;
+    my $i= 0;
+
+    my $reject_now = sub {
+        if (!$failed++) {
+            $pending= 0;
+            $then_what->reject(@_);
+        }
+    };
+
+    for my $p (@_[1 .. $#_]) {
+        my $i = $i++;
+
+        $p->then(
+            sub {
+                $values[$i]= \@_;
+                if ((--$remaining) == 0) {
+                    $pending= 0;
+                    $then_what->resolve(@values);
+                }
+            },
+            $reject_now,
+        );
+    }
+    if (!$remaining && $pending) {
+        $then_what->resolve(@values);
+    }
+    return $then_what->promise;
+}
+
+# Lifted from Promise::ES6
+sub race {
+    my $deferred = Promise::XS::Deferred::create();
+
+    my $is_done;
+
+    my $on_resolve_cr = sub {
+        return if $is_done;
+        $is_done = 1;
+
+        $deferred->resolve(@_);
+
+        # Proactively eliminate references:
+        undef $deferred;
+    };
+
+    my $on_reject_cr = sub {
+        return if $is_done;
+        $is_done = 1;
+
+        $deferred->reject(@_);
+
+        # Proactively eliminate references:
+        undef $deferred;
+    };
+
+    for my $given_promise (@_[1 .. $#_]) {
+        $given_promise->then($on_resolve_cr, $on_reject_cr);
+    }
+
+    return $deferred->promise();
+}
 
 sub _warn_unhandled {
     my (@reasons) = @_;
